--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 
           <% if !user_signed_in? %>
             <li>
-              <a href="/users/sign_in" class="waves-effect waves-light btn purple-text pulse">LOG IN</a>
+              <a href="/users/sign_in" class="waves-effect waves-light btn purple-text pulse">LOG IN / SIGN-UP</a>
             </li>
           <% end %>
 
