--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,8 +39,9 @@ $secondary-color: color("yellow", "base") !default;
   margin: 0 auto;
 }
 
-h4{
-  margin: 10px 15px;
+h3{
+  text-align: left;
+  float:left;
 }
 
 .container{
@@ -63,4 +64,15 @@ h4{
     content: "";
     display: table;
     clear: both;
+}
+
+.logged{
+  text-align: left;
+  padding-left: 10px;
+}
+
+.notice{
+  margin: 20px 0px 20px;
+  font-size: 20px;
+  font-weight: 600;
 }
