--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,6 +8,12 @@
 
 <% if user_signed_in? %>
 <p class="notice"><%= notice %></p>
+<header>DIRECTIONS</header>
+<p>
+  <strong>GOAL: </strong> Eat as many fruit as possible without running into the wall or yourself, and fill up the field of play.
+  <br />
+  Use the arrow keys on your keyboard to control the direction of your snake.
+</p>
   <canvas id="snake" width="608" height="608"></canvas>
   <script src="assets/snake.js"></script>
 <% end %>
