--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,12 +13,10 @@
  *= require_tree .
  *= require_self
  */
-
 @import "materialize/components/color-variables";
 $primary-color: color("blue", "lighten-2") !default;
 $secondary-color: color("yellow", "base") !default;
 @import 'materialize';
-
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome-sprockets";
@@ -26,53 +24,70 @@ $secondary-color: color("yellow", "base") !default;
 @import "bootstrap-social";
 @import "pages";
 
- canvas{
-     display: block;
-     margin: 0 auto;
-    }
-
-.biglogo{
-    width: 100%;
-  }
-.smalllogo{
-  width: 50%;
+canvas {
+  display: block;
   margin: 0 auto;
 }
 
-h3{
-  text-align: left;
-  float:left;
+header {
+  font-size: 20px;
+  font-weight: 600;
 }
 
-.container{
+footer{
+  text-align: center;
+  margin: 20px auto
+}
+
+.biglogo {
+  width: 100%;
+}
+
+img.nav_logo {
+
+  text-align: center;
+
+}
+
+
+
+h3 {
+  text-align: left;
+  float: left;
+}
+
+.home{
+  margin-left: 20px;
+}
+
+.container {
   text-align: center;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 /* Create two equal columns that floats next to each other */
 .column {
-    float: left;
-    width: 50%;
-    padding: 10px;
+  float: left;
+  width: 50%;
+  padding: 10px;
 }
-
 /* Clear floats after the columns */
 .row:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
-.logged{
+.logged {
   text-align: left;
   padding-left: 10px;
+  display: inline-flex;
 }
 
-.notice{
-  margin: 20px 0px 20px;
+.notice {
+  margin: 20px 0;
   font-size: 20px;
   font-weight: 600;
 }
